# smart_receptionist_server

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md  pyproject.toml
.aider.tags.cache.v3/: cache.db
src/smartreceptionist/: config.py  fingerprint_ids.json  main.py
src/smartreceptionist/components/: app_state.py  config.py  event_handler.py  google_home.py  telegram_bot.py  ws_server.py
src/smartreceptionist/components/audio_processing/: audio_helpers.py  audio_processor.py  audio_queue.py
src/smartreceptionist/components/events/: event.py  event_handler.py  event_listener.py
src/smartreceptionist/components/image_processing/: image.py  image_processor.py  image_queue.py
src/smartreceptionist/components/interfaces/: iapp_state.py  ievent_handler.py
tests/: Rihanna - Stay C.opus  Rihanna - Stay.opus  audio.py  esp_cam.py  esp_s3.py  image_processing.py  image_processing2.py  image_processor_test.py.bkp  motion_test.py  wsclient.py
tests/audio/: 20240618-185011.pcm  20240629-211211.opus  audio.py  audio_filter.py  check_streaming.py  my_audio.opus  opus_output.opus  output.opus  receive_audio_ws.py  stream_audio_server.py  stt.py  tts.py
